--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ header{
 .titulosImagenFondo {
     color: white;
     font-size: 40px;
+    font-family:'Mate SC', serif;
 }
 
 .botonFondo1 {
@@ -647,6 +648,7 @@ header{
     .botonFondo1{
         padding: 0.2rem 1rem;
         font-size: 12px;
+        margin-bottom: 1rem;
     }
     .sobreMiImg, .fotoNutricionista, .sobreMiTexto, .seccionServicios, .contenedorContacto, .fondosIndex{
         height: auto;
