--- a/style.css
+++ b/style.css
@@ -205,9 +205,9 @@ header{
 }
 
 .fotoNutricionista {
-    height: 25rem;
-    width: 20rem;
-}
+    height: 30rem;
+    width: 45rem;
+} 
 
 .sobreMiTexto{ 
     text-align: center;
@@ -656,12 +656,17 @@ header{
     .tituloFondo {
         height: 5rem;
     }
+    .sobreMiImg {
+        margin: 2px;
+    }
     .sobreMiTexto {
-        font-size: 18px;
+        font-size: 16px;
     }
     .fotoNutricionista {
-        height: 18rem;
-        width: 15rem;
+        width: 19rem;
+    }
+    .seccionServicios {
+        margin: 2px;
     }
     .imagenesServicios {
         margin-top: 1rem;
@@ -673,6 +678,9 @@ header{
     .imagenesServicios p {
         font-size: 20px;
         margin-top: 1rem;
+    }
+    .contenedorContacto {
+        margin: 2px;
     }
     .mapaConsultorio{
         width: 300px;
