--- a/style.css
+++ b/style.css
@@ -225,24 +225,45 @@ header{
     width: 100%;
 }
 
-.imagenesServicios a {
+.contenedorServicios {
+    position: relative;
+    height: 210px;
+    width: 310px;
+    box-shadow: 0px 15px 25px rgba(0,0,0,0.50);
+    cursor: pointer;
+}
+
+.contenedorServicios:hover{
+    transform: scale(1.3);
+    transition: 2s;
+}
+
+.contenedorServicios a {
     text-decoration: none;
     color: black;
 }
 
-.imagenesServicios p {
-    font-family: 'Hind Vadodara', sans-serif;
-    font-size: 25px;
-    text-align: center;
+.imgServicios{
+    width: 100%;
+    height: 100%;
+    border-radius: 6px;
 }
 
-.imgServicios{
-    width: 300px;
-    height: 200px;
+.capaIndex {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    background-color: rgba(0,0,0,0.5);
+    color: white;
+    text-align: center;
+    border-radius: 6px;
 }
-.imagenesServicios img:hover{
-    transform: scale(1.1);
-    transition: 3s;
+
+.capaIndex p {
+    font-family: 'Mate SC', serif;
+    margin-top: 80px;
+    font-size: 25px;
 }
 
 /*Contacto*/ 
@@ -663,16 +684,13 @@ header{
     .seccionServicios {
         margin: 2px;
     }
-    .imagenesServicios {
-        margin-top: 1rem;
+    .contenedorServicios {
+        margin: 1rem;
+        width: 290px;
+        height: 190px;
     }
-    .imgServicios {
-        width: 250px;
-        height: 150px;
-    }
-    .imagenesServicios p {
-        font-size: 20px;
-        margin-top: 1rem;
+    .contenedorServicios:hover{
+        transform: scale(1.1);
     }
     .contenedorContacto {
         margin: 2px;
@@ -692,7 +710,7 @@ header{
 /*MEDIA QUERY TABLET INDEX*/
 
 
-@media (min-width:481px) and (max-width: 980px) {
+@media (min-width:481px) and (max-width: 1300px) {
     .logoPrincipal {
         height: 50px;
         width: 6rem;
@@ -716,16 +734,11 @@ header{
     .sobreMiTexto {
         font-size: 18px;
     }
-    .imagenesServicios {
-        margin-top: 1rem;
+    .contenedorServicios {
+        margin: 1rem;
     }
-    .imgServicios {
-        width: 250px;
-        height: 150px;
-    }
-    .imagenesServicios p {
-        font-size: 20px;
-        margin-top: 1rem;
+    .contenedorServicios:hover{
+        transform: scale(1.1);
     }
     .mapaConsultorio{
         width: 300px;
@@ -736,6 +749,11 @@ header{
     }
 }
 
+@media (min-width:980px) and (max-width: 1450px) {
+    .sobreMiImg {
+        height: auto;
+    }
+} 
 /*CELULARES SOBRE MI*/ 
 
 @media only screen and (max-width: 480px) {
