--- a/style.css
+++ b/style.css
@@ -238,6 +238,11 @@ header{
     color: black;
 }
 
+.contenedorServicios p:hover {
+    color: #ff0a54;
+    transition: 1s;
+}
+
 .contenedorServicios .clicMasInfo {
     opacity: 0;
 }
@@ -253,7 +258,6 @@ header{
     font-size: 15px;
     transition: all 1.1s ease-out;
 }
-
 
 .imgServicios{
     width: 100%;
@@ -452,15 +456,10 @@ header{
 }
 
 .otrosServicios p {
-    margin: 1rem;
     text-align: center;
     font-size: 23px;
 }
 
-.imgOtrosServicios {
-    width: 300px;
-    height: 200px;
-}
 
 
 /*CSS PAGINA ANTROPOMETRIAS*/
@@ -837,10 +836,6 @@ header{
     .mapaConsultorio2{
         height: 250px;
     }
-    .imgOtrosServicios {
-    width: 250px;
-    height: 150px;
-    }
     .otrosServicios p{
         font-size: 18px;
     }
@@ -878,10 +873,6 @@ header{
     }
     .mapaConsultorio2{
         height: 250px;
-    }
-    .imgOtrosServicios {
-    width: 250px;
-    height: 150px;
     }
     .otrosServicios p{
         font-size: 18px;
