Arme todas las variables, mixins y extends que voy a usar en sass

--- a/SASS/base/_variables.scss
+++ b/SASS/base/_variables.scss
@@ -1,4 +1,6 @@
-$background-body: #fff1e6;
-$background-nav: #e8dbc8;
-$background-botones: salmon;
-$background-titulos: #223843;
+$fondo: #fff1e6;
+$padding: 0;
+$margin-top: 2rem; 
+$width: 100%;
+$estiloLista: none;
+
