--- a/SASS/main.css
+++ b/SASS/main.css
@@ -1,115 +1,10 @@
-body {
-  background-color: #fff1e6;
-}
-
-body header {
-  position: fixed;
-  top: 0;
-  z-index: 1000;
-  background: radial-gradient(circle, #fff1e6 10%, #e8dbc8 87%);
-  width: 100%;
-}
-
-body header nav div a .logoprincipal {
-  border-radius: 8px;
-  height: 60px;
-  width: 7rem;
-  margin-left: 2rem;
-}
-
-body header nav div div .linksNavegacion {
-  background-color: #e8dbc8;
-  border-radius: 30px;
-  width: 60%;
-  -webkit-box-shadow: 4px 7px 37px -2px rgba(0, 0, 0, 0.6);
-  box-shadow: 4px 7px 37px -2px rgba(0, 0, 0, 0.6);
-  list-style: none;
-  margin-right: 5rem;
-}
-
-body header nav div div .linksNavegacion .nav-item #ancorNav {
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: 600;
-  font-family: 'Hind Vadodara', sans-serif;
-  color: black;
-}
-
-body header nav div div .linksNavegacion .nav-item #ancorNav:hover {
-  color: #ff0a54;
-  -webkit-transition: 0.8s;
-  transition: 0.8s;
-}
-
-section div .fondosIndex {
-  height: 90vh;
-  background: no-repeat;
-  background-size: cover;
-}
-
-section div .fondosIndex::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: black;
-  opacity: 0.6;
-}
-
-section div .fondosIndex .tituloFondo {
-  margin-bottom: 2rem;
-}
-
-section div .fondosIndex .tituloFondo .titulosImagenFondo {
-  color: white;
-  font-size: 40px;
-}
-
-section div .fondosIndex .tituloFondo .botonFondoPrincipal .botonFondo1 {
-  background-color: salmon;
-  color: white;
-  font-weight: 600;
-  padding: 1rem;
-  border-radius: 20px;
-  border: black solid 2px;
-  font-size: 15px;
-}
-
-.seccionSobreMi {
+@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@400;500;700&family=Assistant:wght@400;700&family=Hind+Vadodara:wght@400;600&family=Mate+SC&family=Poppins:wght@400;600&family=Sorts+Mill+Goudy&display=swap");
+* {
+  margin: 0;
   padding: 0;
 }
 
-.seccionSobreMi .tituloSobreMi .titulos {
-  font-family: "Mate SC" serif;
-  color: #fff1e6;
-  margin-top: 2rem;
-  background-color: #223843;
-}
-
-.seccionSobreMi .sobreMiImg {
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 80vh;
-  width: 100%;
-}
-
-.seccionSobreMi .sobreMiImg .fotoNutricionista {
-  height: 25rem;
-  width: 20rem;
-}
-
-.seccionSobreMi .sobreMiImg div .sobreMiTexto {
-  text-align: center;
-  font-family: 'Hind Vadodara', sans-serif;
-  font-size: 20px;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
+body {
+  background-color: #fff1e6;
 }
 /*# sourceMappingURL=main.css.map */
