--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@400;500;700&family=Assistant:wght@400;700&family=Hind+Vadodara:wght@400;600&family=Mate+SC&family=Poppins:wght@400;600&family=Sorts+Mill+Goudy&display=swap');
 @import 'base/variables';
 @import 'base/mixins';
 @import 'base/mapeos';
 
-
+@import 'components/generales-todas-las-paginas';
 @import 'components/index'; 
