--- a/SASS/components/_generales-todas-las-paginas.scss
+++ b/SASS/components/_generales-todas-las-paginas.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@400;500;700&family=Assistant:wght@400;700&family=Hind+Vadodara:wght@400;600&family=Mate+SC&family=Poppins:wght@400;600&family=Sorts+Mill+Goudy&display=swap');
+
 *{
     @extend %reseteoCss;
 }
@@ -6,3 +8,50 @@ body {
     background-color: $fondo;
 }
 
+h1 {
+    @include titulosPrincipales (50px, #223843, none)
+}
+
+h2,h3,h4 { 
+    @include titulosPrincipales (40px, #fff1e6, #223843 )
+}
+
+h5,h6 {
+    @include titulosPrincipales (30px,#fff1e6, #223843 )
+}
+
+main {
+    padding: $padding;
+}
+
+footer {
+    @extend %footer; 
+}
+
+.container-fluid {
+    padding: $padding;
+    width: $width;
+}
+
+header {
+    @extend %header;
+}
+
+.linksNavegacion {
+    @extend %linksNav;
+}
+
+#ancorNav {
+    @extend %anchorNav;
+    &:hover {
+        @extend %hoverRojo;
+    }
+}
+
+.logoPrincipal {
+    @extend %logo;
+}
+
+.navbar {
+    padding: $padding;
+}
