--- a/SASS/main.css
+++ b/SASS/main.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@400;500;700&family=Assistant:wght@400;700&family=Hind+Vadodara:wght@400;600&family=Mate+SC&family=Poppins:wght@400;600&family=Sorts+Mill+Goudy&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@400;500;700&family=Assistant:wght@400;700&family=Hind+Vadodara:wght@400;600&family=Mate+SC&family=Poppins:wght@400;600&family=Sorts+Mill+Goudy&display=swap");
-#ancorNav {
+#ancorNav, .contenedorServicios a {
   text-decoration: none;
   color: black;
 }
 
-#ancorNav:hover {
+#ancorNav:hover, .contenedorServicios p:hover {
   color: #ff0a54;
   -webkit-transition: 1s;
   transition: 1s;
@@ -150,5 +150,136 @@ main {
 
 .tituloSobreMi {
   margin-top: 2rem;
+}
+
+.sobreMiImg {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 80vh;
+}
+
+.fotoNutricionista {
+  width: 45rem;
+  height: 30rem;
+}
+
+.sobreMiTexto {
+  font-size: 20px;
+  font-family: 'Hind Vadodara', sans-serif;
+  text-align: center;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+/* Servicios*/
+.seccionServicios {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 90vh;
+}
+
+.contenedorServicios {
+  position: relative;
+  width: 310px;
+  height: 210px;
+  -webkit-box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.5);
+          box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+.contenedorServicios .clicMasInfo {
+  opacity: 0;
+}
+
+.contenedorServicios:hover .textoDelServicio {
+  margin-top: 40px;
+  -webkit-transition: all 1.1s ease-out;
+  transition: all 1.1s ease-out;
+}
+
+.contenedorServicios:hover .clicMasInfo {
+  opacity: 1;
+  max-width: 270px;
+  margin: auto;
+  font-size: 15px;
+  -webkit-transition: all 1.1s ease-out;
+  transition: all 1.1s ease-out;
+}
+
+.imgServicios {
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+}
+
+.capaIndex {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  text-align: center;
+  border-radius: 6px;
+}
+
+.textoDelServicio {
+  font-family: 'Mate SC', serif;
+  font-size: 25px;
+  text-align: center;
+  color: white;
+  width: 100%;
+  background-color: none;
+  margin-top: 80px;
+}
+
+/*Contacto*/
+.contenedorContacto {
+  width: 100%;
+}
+
+.mapaConsultorio {
+  width: 500px;
+  height: 400px;
+}
+
+.direccionConsultorio {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.textoMapa {
+  font-size: 20px;
+  font-family: 'Hind Vadodara', sans-serif;
+  text-align: center;
+}
+
+/*Footer*/
+.botonWhatsapp {
+  width: 7rem;
+  position: fixed;
+  bottom: 5%;
+  right: 0;
 }
 /*# sourceMappingURL=main.css.map */
