--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -6,4 +6,5 @@
 @import 'components/generales-todas-las-paginas';
 @import 'components/index'; 
 @import 'components/sobre-mi';
+@import 'components/planes-de-alimentacion';
 
