--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -7,4 +7,4 @@
 @import 'components/index'; 
 @import 'components/sobre-mi';
 @import 'components/planes-de-alimentacion';
-
+@import 'components/antropometrias';
