--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -8,3 +8,4 @@
 @import 'components/sobre-mi';
 @import 'components/planes-de-alimentacion';
 @import 'components/antropometrias';
+@import 'components/talleres-de-alimentacion';
