reserva tu turno a scss

--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -9,3 +9,4 @@
 @import 'components/planes-de-alimentacion';
 @import 'components/antropometrias';
 @import 'components/talleres-de-alimentacion';
+@import 'components/reserva_tu_turno';
