--- a/SASS/main.css
+++ b/SASS/main.css
@@ -542,4 +542,76 @@ main {
   text-align: center;
   margin-top: 2rem;
 }
+
+/*CSS PAGINA DE RESERVAR EL TURNO*/
+.tituloReserva {
+  margin-top: 6rem;
+}
+
+.contenedorReservas {
+  width: 100%;
+}
+
+.cajaReservas {
+  width: 40%;
+}
+
+.cajaReservas form {
+  margin-bottom: 3rem;
+}
+
+.reservas {
+  width: 100%;
+  height: 90vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 1rem;
+  background-color: #223843;
+  border-radius: 30px;
+}
+
+.reservas input {
+  width: 60%;
+  height: 1.5rem;
+  font-family: 'Hind Vadodara', sans-serif;
+  color: white;
+  background-color: #223843;
+  border: none;
+  border-bottom: solid 1px white;
+}
+
+.reservas input:focus {
+  outline: none;
+  font-family: 'Hind Vadodara', sans-serif;
+  font-size: 15px;
+}
+
+.reservas label {
+  font-size: 15px;
+  font-family: 'Hind Vadodara', sans-serif;
+  font-weight: 600;
+  color: white;
+}
+
+.h2Consultorio {
+  margin-top: 2rem;
+}
+
+::-webkit-calendar-picker-indicator {
+  background-color: white;
+  border-radius: 50px;
+}
 /*# sourceMappingURL=main.css.map */
