--- a/SASS/main.css
+++ b/SASS/main.css
@@ -441,6 +441,10 @@ main {
   margin: 2rem 0;
 }
 
+.otrosServiciosCaja {
+  max-width: 100%;
+}
+
 /*CSS PAGINA ANTROPOMETRIAS*/
 .tituloAntropometria {
   margin-top: 5rem;
@@ -458,6 +462,7 @@ main {
           align-items: center;
   margin-top: 2rem;
   width: 100%;
+  max-width: 100%;
 }
 
 .fotoAntro {
