--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -10,3 +10,6 @@
 @import 'components/antropometrias';
 @import 'components/talleres-de-alimentacion';
 @import 'components/reserva_tu_turno';
+@import 'components/recetas';
+
+@import 'components/mq-index';
