Media query index a scss

--- a/SASS/base/_mixins.scss
+++ b/SASS/base/_mixins.scss
@@ -34,6 +34,11 @@
     align-items: center;
 }
 
+@mixin responsive ($minimoAncho, $maximoAncho) {
+    min-width: $minimoAncho;
+    max-width: $maximoAncho;
+}
+
 %estilosListas {
     text-decoration: none;
     color: black;
