--- a/SASS/main.css
+++ b/SASS/main.css
@@ -53,6 +53,10 @@ footer {
   color: white;
 }
 
+p {
+  margin: 0;
+}
+
 body {
   background-color: #fff1e6;
 }
@@ -646,5 +650,82 @@ main {
       -ms-flex-align: center;
           align-items: center;
   margin: 2rem 0;
+}
+
+/* MEDIA QUERY NAVBAR  */
+@media only screen and (max-width: 991px) {
+  .linksNavegacion {
+    background-color: none;
+    border-radius: 0;
+    width: 100%;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    text-align: center;
+  }
+  #ancorNav {
+    width: 100%;
+  }
+}
+
+/*MEDIA QUERY CELULARES INDEX */
+@media only screen and (max-width: 480px) {
+  .logoPrincipal {
+    width: 6rem;
+    height: 50px;
+  }
+  .seccionCarrusel {
+    margin-top: 4rem;
+  }
+  .titulosImagenFondo {
+    font-size: 30px;
+    background-color: none;
+  }
+  .botonFondo1 {
+    padding: 0.2rem 1rem;
+    font-size: 12px;
+    margin-bottom: 1rem;
+  }
+  .sobreMiImg, .fotoNutricionista, .sobreMiTexto, .seccionServicios, .contenedorContacto, .fondosIndex {
+    height: auto;
+  }
+  .tituloFondo {
+    height: 5rem;
+  }
+  .sobreMiImg {
+    margin: 2px;
+  }
+  .sobreMiTexto {
+    font-size: 16px;
+  }
+  .fotoNutricionista {
+    width: 19rem;
+  }
+  .seccionServicios {
+    margin: 2px;
+  }
+  .contenedorServicios {
+    margin: 1rem;
+    width: 290px;
+    height: 190px;
+  }
+  .contenedorServicios:hover .textoDelServicio {
+    margin-top: none;
+  }
+  .clicMasInfo {
+    display: none;
+  }
+  .contenedorContacto {
+    margin: 2px;
+  }
+  .mapaConsultorio {
+    width: 300px;
+    height: 250px;
+  }
+  .pieDePagina p {
+    font-size: 15px;
+  }
+  .botonWhatsapp {
+    width: 5.5rem;
+  }
 }
 /*# sourceMappingURL=main.css.map */
