--- a/SASS/main.css
+++ b/SASS/main.css
@@ -694,8 +694,9 @@ main {
   .sobreMiImg {
     margin: 2px;
   }
-  .sobreMiTexto {
+  .sobreMiTexto, .textoMapa {
     font-size: 16px;
+    margin-bottom: 2rem;
   }
   .fotoNutricionista {
     width: 19rem;
@@ -726,6 +727,47 @@ main {
   }
   .botonWhatsapp {
     width: 5.5rem;
+  }
+}
+
+/*MEDIA QUERY TABLET INDEX*/
+@media (min-width: 481px) and (max-width: 1300px) {
+  .logoPrincipal {
+    width: 6rem;
+    height: 50px;
+  }
+  .seccionCarrusel {
+    margin-top: 2rem;
+  }
+  .titulosImagenFondo {
+    font-size: 30px;
+  }
+  .botonFondo1 {
+    padding: 0.2rem 1rem;
+    font-size: 12px;
+  }
+  .sobreMiImg, .fotoNutricionista, .sobreMiTexto, .seccionServicios, .contenedorContacto, .fondosIndex {
+    height: auto;
+  }
+  .tituloFondo {
+    height: 5rem;
+  }
+  .sobreMiTexto, .textoMapa {
+    font-size: 18px;
+    margin: 2rem 0;
+  }
+  .contenedorServicios {
+    margin: 1rem 10px;
+  }
+  .contenedorServicios:hover .textoDelServicio {
+    margin-top: none;
+  }
+  .clicMasInfo {
+    display: none;
+  }
+  .mapaConsultorio {
+    width: 300px;
+    height: 250px;
   }
 }
 /*# sourceMappingURL=main.css.map */
