--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -12,4 +12,4 @@
 @import 'components/reserva_tu_turno';
 @import 'components/recetas';
 
-@import 'components/mq-index';
+@import 'components/Media-querys/mq-index';
