--- a/SASS/main.css
+++ b/SASS/main.css
@@ -336,10 +336,6 @@ main {
   width: 100%;
 }
 
-.fotoCemic {
-  width: 30rem;
-}
-
 .sobreMi3 {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
@@ -354,8 +350,8 @@ main {
   width: 100%;
 }
 
-.garrahan {
-  width: 38rem;
+.fotoCemic, .garrahan {
+  width: 37rem;
   margin-bottom: 2rem;
 }
 
@@ -768,6 +764,78 @@ main {
   .mapaConsultorio {
     width: 300px;
     height: 250px;
+  }
+}
+
+/*CELULARES SOBRE MI*/
+@media only screen and (max-width: 480px) {
+  .sobreMi1, .sobreMi2, .sobreMi3 {
+    padding-left: 1.5rem;
+    height: auto;
+  }
+  .fotoSobreMi1 {
+    width: 19rem;
+  }
+  .fotoCemic, .garrahan {
+    margin-bottom: 0;
+  }
+  .textoSobreMi {
+    font-size: 15px;
+    margin: 1rem 0;
+  }
+}
+
+/*TABLET SOBRE MI*/
+@media (min-width: 481px) and (max-width: 1000px) {
+  .sobreMi1, .sobreMi2, .sobreMi3 {
+    padding-left: 1.5rem;
+    height: auto;
+  }
+  .fotoSobreMi1, .fotoCemic, .garrahan {
+    width: 35rem;
+  }
+  .textoSobreMi {
+    font-size: 17px;
+    margin: 1.5rem 0;
+  }
+}
+
+@media (min-width: 1001px) and (max-width: 1100px) {
+  .sobreMi1, .sobreMi2, .sobreMi3 {
+    height: auto;
+  }
+  .fotoSobreMi1, .fotoCemic, .garrahan {
+    width: 30rem;
+  }
+  .textoSobreMi {
+    font-size: 18px;
+    margin: 1.5rem 0;
+  }
+}
+
+@media (min-width: 1101px) and (max-width: 1400px) {
+  .sobreMi1, .sobreMi2, .sobreMi3 {
+    height: auto;
+  }
+  .fotoSobreMi1, .fotoCemic, .garrahan {
+    width: 34rem;
+  }
+  .textoSobreMi {
+    font-size: 18px;
+    margin: 1.5rem 0;
+  }
+}
+
+@media (min-width: 1201px) and (max-width: 1439px) {
+  .sobreMi1, .sobreMi2, .sobreMi3 {
+    height: auto;
+  }
+  .fotoSobreMi1, .fotoCemic, .garrahan {
+    width: 35rem;
+    margin: 1rem;
+  }
+  .textoSobreMi {
+    margin: 1.5rem 0;
   }
 }
 /*# sourceMappingURL=main.css.map */
