--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -14,3 +14,4 @@
 
 @import 'components/Media-querys/mq-index';
 @import 'components/Media-querys/mq-sobre-mi';
+@import 'components/Media-querys/mq-planes-de-alimentacion';
