mq de antropometrias a scss

--- a/SASS/components/Media-querys/_mq-planes-de-alimentacion.scss
+++ b/SASS/components/Media-querys/_mq-planes-de-alimentacion.scss
@@ -24,7 +24,7 @@
         margin-top: 0;
     }
     .contenedorReservas {
-        padding: 1rem 1rem 1rem 2.5rem;
+        padding-left: 1.5rem;
     }
     .cajaReservas {
         width: $width;
