--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -15,3 +15,4 @@
 @import 'components/Media-querys/mq-index';
 @import 'components/Media-querys/mq-sobre-mi';
 @import 'components/Media-querys/mq-planes-de-alimentacion';
+@import 'components/Media-querys/mq-antropometrias';
