--- a/SASS/main.css
+++ b/SASS/main.css
@@ -472,7 +472,7 @@ main {
 }
 
 .fotoAntro {
-  width: 45rem;
+  width: 40rem;
   height: 25rem;
   margin-bottom: 2rem;
 }
@@ -871,7 +871,7 @@ main {
     margin-top: 0;
   }
   .contenedorReservas {
-    padding: 1rem 1rem 1rem 2.5rem;
+    padding-left: 1.5rem;
   }
   .cajaReservas {
     width: 100%;
@@ -924,6 +924,50 @@ main {
   }
   .textoMapa {
     font-size: 19px;
+  }
+}
+
+/* CELULAR ANTROPOMETRIA*/
+@media only screen and (max-width: 480px) {
+  .tituloAntropometria {
+    font-size: 35px;
+  }
+  .fotoAntro, .fotoGrasa, .fotoMusculo {
+    width: 20rem;
+    height: 13rem;
+    margin-bottom: 0;
+  }
+  .textosAntro {
+    font-size: 17px;
+    margin-bottom: 2rem;
+  }
+  .tituloMasaMuscular {
+    margin-bottom: 1rem;
+  }
+  .antroFotoIzquierda, .antroFotoADerecha {
+    padding-left: 1.5rem;
+  }
+}
+
+/*TABLET ANTROPOMETRIA*/
+@media (min-width: 481px) and (max-width: 1023px) {
+  .tituloAntropometria {
+    font-size: 45px;
+  }
+  .fotoAntro, .fotoGrasa, .fotoMusculo {
+    width: 28rem;
+    height: 18rem;
+    margin-bottom: 0;
+  }
+  .textosAntro {
+    font-size: 18px;
+    margin-bottom: 2rem;
+  }
+  .tituloMasaMuscular {
+    margin-bottom: 1rem;
+  }
+  .antroFotoIzquierda, .antroFotoADerecha {
+    padding-left: 1.5rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
