mq talleres de alimentacion a scss

--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -16,3 +16,4 @@
 @import 'components/Media-querys/mq-sobre-mi';
 @import 'components/Media-querys/mq-planes-de-alimentacion';
 @import 'components/Media-querys/mq-antropometrias';
+@import 'components/Media-querys/mq-talleres-de-alimentacion';
