MQ reservar el turno a scss

--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -17,3 +17,4 @@
 @import 'components/Media-querys/mq-planes-de-alimentacion';
 @import 'components/Media-querys/mq-antropometrias';
 @import 'components/Media-querys/mq-talleres-de-alimentacion';
+@import 'components/Media-querys/mq-reservar-el-turno';
