Agregue el modal para el formulario del footer

--- a/SASS/components/_generales-todas-las-paginas.scss
+++ b/SASS/components/_generales-todas-las-paginas.scss
@@ -59,3 +59,20 @@ header {
 .navbar {
     padding: $padding;
 }
+
+.botonWhatsapp {
+    width: 7rem;
+    position: fixed;
+    bottom: 5%;
+    right: 0;
+}
+
+.parrafoModal {
+    color: black;
+}
+.tituloModal {
+    font-size: 25px;
+}
+.botonModalWhatsapp {
+    width: 7rem;
+}
