--- a/SASS/main.css
+++ b/SASS/main.css
@@ -101,6 +101,25 @@ main {
   padding: 0;
 }
 
+.botonWhatsapp {
+  width: 7rem;
+  position: fixed;
+  bottom: 5%;
+  right: 0;
+}
+
+.parrafoModal {
+  color: black;
+}
+
+.tituloModal {
+  font-size: 25px;
+}
+
+.botonModalWhatsapp {
+  width: 7rem;
+}
+
 /*CSS DEL INDEX DE LA PAGINA*/
 /* Titulo principal con imagen de fondo*/
 .seccionCarrusel {
@@ -279,14 +298,6 @@ main {
   font-size: 20px;
   font-family: 'Hind Vadodara', sans-serif;
   text-align: center;
-}
-
-/*Footer*/
-.botonWhatsapp {
-  width: 7rem;
-  position: fixed;
-  bottom: 5%;
-  right: 0;
 }
 
 /*CSS PAGINA SOBRE MI*/
