Agregue modal al form de reserva tu turno

--- a/SASS/components/_reserva_tu_turno.scss
+++ b/SASS/components/_reserva_tu_turno.scss
@@ -53,5 +53,9 @@
 ::-webkit-calendar-picker-indicator {
     background-color: white;
     border-radius: 50px;
+    margin-bottom: 5px;
 }
 
+.botonEnviarForm {
+    width: 50%;
+}
