Agregue boton conoceme mas en sobre mi index

--- a/SASS/components/_index.scss
+++ b/SASS/components/_index.scss
@@ -61,6 +61,10 @@
     height: fit-content;
 }
 
+.botonConoceMas {
+    text-align: center;
+    margin: 2.5rem 0; 
+}
 /* Servicios*/ 
 
 .seccionServicios {
