--- a/SASS/main.css
+++ b/SASS/main.css
@@ -205,6 +205,11 @@ main {
   height: fit-content;
 }
 
+.botonConoceMas {
+  text-align: center;
+  margin: 2.5rem 0;
+}
+
 /* Servicios*/
 .seccionServicios {
   -webkit-box-orient: horizontal;
