--- a/SASS/main.css
+++ b/SASS/main.css
@@ -306,6 +306,10 @@ main {
   text-align: center;
 }
 
+.capaIndex {
+  visibility: hidden;
+}
+
 /*CSS PAGINA SOBRE MI*/
 .titPagSobreMi {
   margin-top: 5rem;
@@ -757,6 +761,9 @@ main {
   }
   .placeholderFooter {
     margin-bottom: 1.5rem;
+  }
+  .capaIndex:focus {
+    visibility: inherit;
   }
 }
 
