--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -10,7 +10,7 @@
 @import 'components/antropometrias';
 @import 'components/talleres-de-alimentacion';
 @import 'components/reserva_tu_turno';
-@import 'components/recetas';
+@import 'components/beneficios';
 
 @import 'components/Media-querys/mq-index';
 @import 'components/Media-querys/mq-sobre-mi';
