--- a/SASS/components/_reserva_tu_turno.scss
+++ b/SASS/components/_reserva_tu_turno.scss
@@ -25,8 +25,9 @@
     margin-top: 1rem;
     background-color: #223843;
     border-radius: 30px;
+    position: relative;
     input {
-        @include AnchoAlto (60%,1.5rem);
+        @include AnchoAlto (60%,auto);
         font-family: 'Hind Vadodara', sans-serif;
         color: white;
         background-color: #223843;
