--- a/SASS/components/__como-trabajo.scss
+++ b/SASS/components/__como-trabajo.scss
@@ -4,15 +4,16 @@
     padding-bottom: 2rem;
 }
 
-.recetasParteIzquierda {
+.comoTrabajoParteIzquierda {
     margin: 2rem 0;
+    @include flexbox (row);
 }
 
-.videoPanIntegral, .videoPizzaZanahoria {
+.fotoAtencionOnline, .fotoAtencionDomicilio, .fotoOtrosBeneficios {
     width: 35rem;
 }
 
-.recetasParteDerecha {
+.comoTrabajoParteDerecha {
     @include flexbox (row-reverse);
     margin: 2rem 0;
 }
@@ -26,4 +27,7 @@
         margin-top: 1rem;
         font-weight: 400;
     }
+}
+.textosComoTrabajo {
+    font-size: 17px;
 }
