--- a/SASS/components/__como-trabajo.scss
+++ b/SASS/components/__como-trabajo.scss
@@ -1,4 +1,4 @@
-/*CSS PAGINA DE BENEFICIOS*/
+/*CSS PAGINA COMO TRABAJO*/
 .tituloComoTrabajo {
     padding-top: 5rem;
     padding-bottom: 2rem;
@@ -21,8 +21,9 @@
     margin: 2rem 0;
 }
 .listaBeneficios {
-    padding-left: 1rem;
+    padding-left: 2.5rem;
     margin-top: 1rem;
+    font-size: 17px;
     li{
         margin-top: 1rem;
         font-weight: 400;
@@ -30,4 +31,5 @@
 }
 .textosComoTrabajo {
     font-size: 17px;
+    text-align: center;
 }
