--- a/SASS/main.css
+++ b/SASS/main.css
@@ -653,7 +653,7 @@ main {
   width: 50%;
 }
 
-/*CSS PAGINA DE BENEFICIOS*/
+/*CSS PAGINA COMO TRABAJO*/
 .tituloComoTrabajo {
   padding-top: 5rem;
   padding-bottom: 2rem;
@@ -694,8 +694,9 @@ main {
 }
 
 .listaBeneficios {
-  padding-left: 1rem;
+  padding-left: 2.5rem;
   margin-top: 1rem;
+  font-size: 17px;
 }
 
 .listaBeneficios li {
@@ -705,6 +706,7 @@ main {
 
 .textosComoTrabajo {
   font-size: 17px;
+  text-align: center;
 }
 
 /* MEDIA QUERY NAVBAR  */
@@ -731,6 +733,12 @@ main {
   .seccionCarrusel {
     margin-top: 4rem;
   }
+  .seccionCarrusel .fondosIndex {
+    height: auto;
+  }
+  .seccionCarrusel .fondosIndex .tituloFondo {
+    height: 5rem;
+  }
   .titulosImagenFondo {
     font-size: 30px;
     background-color: none;
@@ -740,11 +748,8 @@ main {
     font-size: 12px;
     margin-bottom: 1rem;
   }
-  .sobreMiImg, .fotoNutricionista, .sobreMiTexto, .seccionServicios, .contenedorContacto, .fondosIndex {
+  .sobreMiImg, .fotoNutricionista, .sobreMiTexto, .seccionServicios, .contenedorContacto {
     height: auto;
-  }
-  .tituloFondo {
-    height: 5rem;
   }
   .sobreMiImg {
     margin: 2px;
@@ -1101,6 +1106,25 @@ main {
 @media (min-width: 481px) and (max-width: 1024px) {
   .tituloReserva {
     margin-top: 6rem;
+  }
+}
+
+/* CELULAR COMO TRABAJO*/
+@media only screen and (max-width: 480px) {
+  .textosComoTrabajo {
+    font-size: 15px;
+    margin: 1rem 0;
+  }
+  .listaBeneficios {
+    padding-left: 1.5rem;
+    font-size: 15px;
+  }
+}
+
+/*TABLET RESERVA TU TURNO*/
+@media (min-width: 481px) and (max-width: 1200px) {
+  .textosComoTrabajo {
+    margin: 1rem 0;
   }
 }
 /*# sourceMappingURL=main.css.map */
