--- a/SASS/components/Media-querys/_mq-index.scss
+++ b/SASS/components/Media-querys/_mq-index.scss
@@ -23,12 +23,6 @@
     }
     .seccionCarrusel {
         margin-top: 4rem;
-        .fondosIndex{
-            height: auto;
-            .tituloFondo {
-                height: 5rem;
-            }
-        }
     }
     .titulosImagenFondo {
         font-size: 30px;
@@ -39,8 +33,11 @@
         font-size: 12px;
         margin-bottom: 1rem;
     }
-    .sobreMiImg, .fotoNutricionista, .sobreMiTexto, .seccionServicios, .contenedorContacto{
+    .sobreMiImg, .fotoNutricionista, .sobreMiTexto, .seccionServicios, .contenedorContacto, .fondosIndex{
         height: auto;
+    }
+    .tituloFondo {
+        height: 5rem;
     }
     .sobreMiImg {
         margin: 2px;
