mq index acomode un poco el mapa que estaba raro

--- a/SASS/components/Media-querys/_mq-index.scss
+++ b/SASS/components/Media-querys/_mq-index.scss
@@ -118,7 +118,7 @@
         display: none;
     }
     .mapaConsultorio{
-        @include AnchoAlto (300px,250px);
+        padding-left: 2rem;
     }
     .textoFooterDescuentos {
         padding-bottom: 1rem;
