--- a/SASS/components/Media-querys/_mq-antropometrias.scss
+++ b/SASS/components/Media-querys/_mq-antropometrias.scss
@@ -10,7 +10,7 @@
     } 
     .textosAntro{
         font-size: 17px;
-        margin-bottom: 2rem;
+        margin: 2rem 0;
     }
     .tituloMasaMuscular {
         margin-bottom: 1rem;
@@ -22,7 +22,7 @@
 
 /*TABLET ANTROPOMETRIA*/
 
-@media (min-width:481px) and (max-width: 1023px) {
+@media (min-width:481px) and (max-width: 1199px) {
     .tituloAntropometria {
         font-size: 45px;
     }
@@ -31,8 +31,8 @@
         margin-bottom: 0;
     } 
     .textosAntro{
-        font-size: 18px;
-        margin-bottom: 2rem;
+        font-size: 17px;
+        margin: 2rem 0;
     }
     .tituloMasaMuscular {
         margin-bottom: 1rem;
@@ -41,3 +41,10 @@
         padding-left: 1.5rem;
     }
 }
+
+@media (min-width:1200px) and (max-width: 1285px) {
+    .fotoAntro, .fotoGrasa, .fotoMusculo {
+        @include AnchoAlto (37rem,23rem);
+    }
+}
+
