--- a/SASS/main.css
+++ b/SASS/main.css
@@ -524,7 +524,6 @@ main {
   font-size: 20px;
   font-family: 'Hind Vadodara', sans-serif;
   text-align: center;
-  margin-top: 2rem;
 }
 
 .textoMasaMuscular {
@@ -1018,7 +1017,7 @@ main {
   }
   .textosAntro {
     font-size: 17px;
-    margin-bottom: 2rem;
+    margin: 2rem 0;
   }
   .tituloMasaMuscular {
     margin-bottom: 1rem;
@@ -1029,7 +1028,7 @@ main {
 }
 
 /*TABLET ANTROPOMETRIA*/
-@media (min-width: 481px) and (max-width: 1023px) {
+@media (min-width: 481px) and (max-width: 1199px) {
   .tituloAntropometria {
     font-size: 45px;
   }
@@ -1039,14 +1038,21 @@ main {
     margin-bottom: 0;
   }
   .textosAntro {
-    font-size: 18px;
-    margin-bottom: 2rem;
+    font-size: 17px;
+    margin: 2rem 0;
   }
   .tituloMasaMuscular {
     margin-bottom: 1rem;
   }
   .antroFotoIzquierda, .antroFotoADerecha {
     padding-left: 1.5rem;
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1285px) {
+  .fotoAntro, .fotoGrasa, .fotoMusculo {
+    width: 37rem;
+    height: 23rem;
   }
 }
 
