--- a/SASS/components/_planes-de-alimentacion.scss
+++ b/SASS/components/_planes-de-alimentacion.scss
@@ -11,13 +11,12 @@
 }
 
 .juliAtendiendo {
-    width: 30rem;
-    margin-bottom: 2rem;
+    width: 35rem;
 }
 
 .textosPlanes {
     @include textos (20px);
-    margin-top: $margin-top;
+    margin: 2rem 0;
 }
 
 .listaDePlanes ul li {
@@ -34,6 +33,9 @@
 
 .planesImg2, .planesImg3, .planesImg4 {
     @include AnchoAlto (35rem,20rem);
+}
+
+.planesImg3 {
     margin-bottom: 2rem;
 }
 
