--- a/SASS/main.css
+++ b/SASS/main.css
@@ -396,15 +396,14 @@ main {
 }
 
 .juliAtendiendo {
-  width: 30rem;
-  margin-bottom: 2rem;
+  width: 35rem;
 }
 
 .textosPlanes {
   font-size: 20px;
   font-family: 'Hind Vadodara', sans-serif;
   text-align: center;
-  margin-top: 2rem;
+  margin: 2rem 0;
 }
 
 .listaDePlanes ul li {
@@ -431,6 +430,9 @@ main {
 .planesImg2, .planesImg3, .planesImg4 {
   width: 35rem;
   height: 20rem;
+}
+
+.planesImg3 {
   margin-bottom: 2rem;
 }
 
@@ -982,8 +984,8 @@ main {
     margin-bottom: 0;
   }
   .planesImg2, .planesImg3, .planesImg4 {
-    width: 25rem;
-    height: 15rem;
+    width: 30rem;
+    height: 18rem;
   }
   .tituloReserva, .h3Consultorio {
     margin-top: 0;
