--- a/SASS/components/Media-querys/_mq-sobre-mi.scss
+++ b/SASS/components/Media-querys/_mq-sobre-mi.scss
@@ -27,6 +27,7 @@
     }
     .fotoSobreMi1, .fotoCemic, .garrahan {
         width: 35rem;
+        margin-bottom: 0;
     }
     .textoSobreMi {
         font-size: 17px;
@@ -37,6 +38,9 @@
 @media (min-width:1001px) and (max-width: 1100px) {
     .sobreMi1, .sobreMi2, .sobreMi3 {
         height: auto;
+    }
+    .fotoSobreMi1, .fotoCemic, .garrahan {
+        margin-bottom: 0;
     }
     .textoSobreMi {
         font-size: 18px;
@@ -60,7 +64,6 @@
     }
     .fotoSobreMi1, .fotoCemic, .garrahan {
         width: 35rem;
-        margin: 1rem;
     }
     .textoSobreMi {
         margin: 1.5rem 0;
