pase antropometrias.html por el validador

--- a/SASS/main.css
+++ b/SASS/main.css
@@ -476,7 +476,7 @@ main {
 
 /*CSS PAGINA ANTROPOMETRIAS*/
 .tituloAntropometria {
-  margin-top: 5rem;
+  margin: 3rem 0;
 }
 
 .antroFotoIzquierda {
