--- a/SASS/main.css
+++ b/SASS/main.css
@@ -379,6 +379,7 @@ main {
 /* CSS PAGINA PLANES DE ALIMENTACIÓN */
 .titPlanes {
   margin-top: 5rem;
+  margin-bottom: 2rem;
 }
 
 .planesSeccion1, .planesSeccion3 {
@@ -432,8 +433,8 @@ main {
   height: 20rem;
 }
 
-.planesImg3 {
-  margin-bottom: 2rem;
+.planesImg3, .planesImg4 {
+  margin: 2rem 0;
 }
 
 .h3Consultorio {
